<resources>
    <string name="app_name" translatable="false">Expirat</string>

    <string name="hint_product_name">Item Name</string>

    <string name="header_product_name">Item Name</string>
    <string name="header_buy_date">Buy Date</string>
    <string name="header_expired_date">Expired Date</string>

    <string name="label_btn_save">Save</string>

    <string name="error_msg_buy_date_same_as_expired_date">Oops, it\'s looks like this item is almost expired.</string>
    <string name="error_msg_buy_date_bigger_than_expired_date">Hmm, this item is already expired.</string>
    <string name="error_msg_name_empty">Oops, this field cannot be empty!</string>
    <string name="error_msg_data_not_found">Data not found.</string>

    <string name="msg_data_saved">Data saved.</string>

    <string name="format_label_days_left">%o\ndays left</string>
    <string name="format_label_year_left">%o\nyear left</string>
    <string name="format_label_buy_date">Buy Date\n%s</string>
    <string name="format_label_expired_date">Expired Date\n%s</string>
    <string name="image_description_empty_list" translatable="false">Image empty list</string>
    <string name="message_empty_list">You don\'t have any items.\nAdd new one here.</string>
    <string name="message_empty_expire_list">Everything is good.</string>
    <string name="title_action_delete" translatable="false">Delete</string>
    <string name="image_description_action_more" translatable="false">Action more</string>
    <string name="label_expired_items">Expired Items</string>
    <string name="content_desc_arrow_right" translatable="false">Arrow right</string>
    <string name="content_desc_icon" translatable="false">Icon</string>
    <string name="msg_notification">%d items is almost expired. Please check it now!</string>

    <string name="label_version">Version %s</string>
    <string name="header_groups">Groups</string>
    <string name="action_new_group">New group</string>
    <string name="hint_group_name">Group Name</string>
    <string name="title_manage_groups">Manage Groups</string>

    <string name="delete_message">This group will be deleted, and all items in this group will also be deleted. Do you want to delete this group?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">No</string>

</resources>
